<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_CurrentSubscription" Id="{8bba5520-50ee-47b0-9a0e-98b64692b931}">
    <Declaration><![CDATA[TYPE ST_CurrentSubscription :
STRUCT
	priceInfo	: ST_PriceInfo;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>