<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_Homes" Id="{bd736665-c751-4bc2-bbd2-4af417935707}">
    <Declaration><![CDATA[TYPE ST_Homes :
STRUCT
	currentSubscription	: ST_CurrentSubscription;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>