<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_TibberPrice" Id="{5474450f-ea0d-4e9f-8809-3be6e73db1a9}">
    <Declaration><![CDATA[TYPE ST_TibberPrice :
STRUCT
	data	: ST_Data;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>